--- a/auto-insert-script/package.json
+++ b/auto-insert-script/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "script-de-merde",
+  "name": "anime-auto-insert-script",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,8 +7,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
+  "description": "Automated script to scrape anime data and sync with database",
   "dependencies": {
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
